RESOLVED FIXED179305
Canonical name of EUC-KR encoding should be EUC-KR, not windows-949
https://bugs.webkit.org/show_bug.cgi?id=179305
Summary Canonical name of EUC-KR encoding should be EUC-KR, not windows-949
Maciej Stachowiak
Reported 2017-11-05 16:31:48 PST
Canonical name of EUC-KR encoding should be EUC-KR, not windows-949
Attachments
Patch (28.79 KB, patch)
2017-11-05 16:35 PST, Maciej Stachowiak
no flags
Archive of layout-test-results from ews101 for mac-elcapitan (1.01 MB, application/zip)
2017-11-05 17:31 PST, Build Bot
no flags
Archive of layout-test-results from ews107 for mac-elcapitan-wk2 (1.25 MB, application/zip)
2017-11-05 17:37 PST, Build Bot
no flags
Archive of layout-test-results from ews113 for mac-elcapitan (1.90 MB, application/zip)
2017-11-05 17:37 PST, Build Bot
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (1.04 MB, application/zip)
2017-11-05 17:56 PST, Build Bot
no flags
Patch (29.92 KB, patch)
2017-11-05 18:15 PST, Maciej Stachowiak
no flags
Patch for landing (29.50 KB, patch)
2017-11-05 23:58 PST, Maciej Stachowiak
no flags
Maciej Stachowiak
Comment 1 2017-11-05 16:35:07 PST
Build Bot
Comment 2 2017-11-05 17:31:05 PST
Comment on attachment 326088 [details] Patch Attachment 326088 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/5117169 New failing tests: fast/encoding/char-decoding.html
Build Bot
Comment 3 2017-11-05 17:31:06 PST
Created attachment 326089 [details] Archive of layout-test-results from ews101 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Build Bot
Comment 4 2017-11-05 17:37:18 PST
Comment on attachment 326088 [details] Patch Attachment 326088 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5117177 New failing tests: fast/encoding/char-decoding.html
Build Bot
Comment 5 2017-11-05 17:37:19 PST
Comment on attachment 326088 [details] Patch Attachment 326088 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/5117139 New failing tests: fast/encoding/char-decoding.html
Build Bot
Comment 6 2017-11-05 17:37:20 PST
Created attachment 326090 [details] Archive of layout-test-results from ews107 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
Build Bot
Comment 7 2017-11-05 17:37:20 PST
Created attachment 326091 [details] Archive of layout-test-results from ews113 for mac-elcapitan The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-elcapitan Platform: Mac OS X 10.11.6
Maciej Stachowiak
Comment 8 2017-11-05 17:53:08 PST
Turns out that this actually makes a functional difference to decoding, since ICU does not believe EUC-KR and windows-949 are the same, thus the fast/encoding/char-decoding.html failures. Web Platform sets does not appear to have a test that can tell the difference. Chrome and Firefox both treat EUC-KR as the canonical name but decode as if windows-949. They also both do not seem to recognize x-windows-949.
Build Bot
Comment 9 2017-11-05 17:56:29 PST
Comment on attachment 326088 [details] Patch Attachment 326088 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/5117199 New failing tests: fast/encoding/char-decoding.html http/tests/workers/service/service-worker-clear.html
Build Bot
Comment 10 2017-11-05 17:56:30 PST
Created attachment 326092 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.6
Maciej Stachowiak
Comment 11 2017-11-05 18:15:21 PST
WebKit Commit Bot
Comment 12 2017-11-05 23:31:34 PST
Comment on attachment 326095 [details] Patch Rejecting attachment 326095 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'land-attachment', '--force-clean', '--non-interactive', '--parent-command=commit-queue', 326095, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: ayoutTests/imported/w3c/ChangeLog error: Error building trees Failed to run "['git', 'commit', '--all', '-F', '-']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit You have both LayoutTests/imported/w3c and LayoutTests/imported/w3c/ChangeLog You have both LayoutTests/imported/w3c and LayoutTests/imported/w3c/ChangeLog error: Error building trees Failed to run "['git', 'commit', '--all', '-F', '-']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Updating OpenSource Current branch master is up to date. Full output: http://webkit-queues.webkit.org/results/5119591
Maciej Stachowiak
Comment 13 2017-11-05 23:58:29 PST
Created attachment 326108 [details] Patch for landing
WebKit Commit Bot
Comment 14 2017-11-06 00:31:48 PST
Comment on attachment 326108 [details] Patch for landing Clearing flags on attachment: 326108 Committed r224484: <https://trac.webkit.org/changeset/224484>
WebKit Commit Bot
Comment 15 2017-11-06 00:31:50 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 16 2017-11-15 12:10:48 PST
Note You need to log in before you can comment on or make changes to this bug.