Canonical name of EUC-KR encoding should be EUC-KR, not windows-949 https://bugs.webkit.org/show_bug.cgi?id=179305

Reviewed by Alexey Proskuryakov.

LayoutTests/imported/w3c:

* web-platform-tests/encoding/textdecoder-labels-expected.txt: Updated expected results. The test already correctly covered this.
* web-platform-tests/encoding/textencoder-constructor-non-utf-expected.txt: ditto

Source/WebCore:

Already covered by:
LayoutTests/imported/w3c/web-platform-tests/encoding/textdecoder-labels.html
LayoutTests/imported/w3c/web-platform-tests/encoding/textencoder-constructor-non-utf-expected.html
LayoutTests/fast/encoding/charset-decode.html

* platform/text/TextCodecICU.cpp: Change registration so the EUC-KR name
is canonical.
(WebCore::TextCodecICU::registerCodecs): However, we still want to use the windows-949
decoder. It's not exactly the same, but the spec calls for that.


Canonical link: https://commits.webkit.org/195403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224484 268f45cc-cd09-0410-ab3c-d52691b4dbfc